class PaymentMethod{
}
    
module.export = PaymentMethod