
class PaypalPayment extends PaymentMethod{

}
module.export = PaypalPayment

