
class CardPayment extends PaymentMethod{

}

module.export= CardPayment

