class ScooterApp{

    //properties
    city;
    borough;
    usernameAndPassword;
    summary;
    payment;
    customerService;

    //contructor
    constructor(city, borough, summary){
    this.city = city
    this.borough = borough
    this.summary = summary


    }

}

module.export = ScooterApp